--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node_modules/elm-doc-test/bin/cli.js && node_modules/elm-test/bin/elm-test tests/Doc/Main.elm",
-    "test:w": "node_modules/elm-doc-test/bin/cli.js && node_modules/elm-test/bin/elm-test tests/Doc/Main.elm --watch"
+    "test": "node_modules/elm-test/bin/elm-test && node_modules/elm-doc-test/bin/cli.js && node_modules/elm-test/bin/elm-test tests/Doc/Main.elm",
+    "test:w": "node_modules/chokidar-cli/index.js \"**/*.elm\" -i \"tests/Doc/**/*.*\" -c \"npm run test\""
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   "author": "GWI",
   "license": "BSD-3-Clause",
   "devDependencies": {
+    "chokidar-cli": "^1.2.0",
     "elm-doc-test": "^2.2.3",
     "elm-test": "^0.18.2"
   }
