--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node_modules/elm-test/bin/elm-test",
+    "test": "node_modules/.bin/elm-verify-examples --elm-test node_modules/.bin/elm-test && node_modules/.bin/elm-test",
     "test:w": "node_modules/chokidar-cli/index.js \"**/*.elm\" -c \"npm run test\""
   },
   "repository": {
@@ -25,6 +25,7 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "chokidar-cli": "^1.2.0",
-    "elm-test": "^0.19.0-beta5"
+    "elm-test": "^0.19.0-beta5",
+    "elm-verify-examples": "^3.0.0"
   }
 }
