--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node_modules/elm-test/bin/elm-test && node_modules/elm-doc-test/bin/cli.js && node_modules/elm-test/bin/elm-test tests/Doc/Main.elm",
-    "test:w": "node_modules/chokidar-cli/index.js \"**/*.elm\" -i \"tests/Doc/**/*.*\" -c \"npm run test\""
+    "test": "node_modules/.bin/elm-verify-examples --elm-test node_modules/.bin/elm-test && node_modules/.bin/elm-test",
+    "test:w": "node_modules/chokidar-cli/index.js \"**/*.elm\" -c \"npm run test\""
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "chokidar-cli": "^1.2.0",
-    "elm-doc-test": "^2.2.3",
-    "elm-test": "^0.18.2"
+    "elm-test": "^0.19.0-beta5",
+    "elm-verify-examples": "^3.0.0"
   }
 }
