--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "chokidar-cli": "^1.2.0",
+    "elm": "^0.19.0-bugfix2",
     "elm-test": "^0.19.0-beta5",
     "elm-verify-examples": "^3.0.0"
   }
