--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "chokidar-cli": "^1.2.0",
     "elm": "^0.19.0-bugfix2",
-    "elm-test": "^0.19.0-beta5",
+    "elm-test": "^0.19.0-rev4",
     "elm-verify-examples": "^3.0.0"
   }
 }
