Run elm-verify-examples in travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: elm
+elm:
+  - elm0.19.0
+
+install:
+  - yarn install
+
+script:
+  - elm-format --validate .
+  - yarn test
+  - yarn verify-examples
