Update to latest elm-verify-examples

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "test": "npx elm-test",
-    "verify-examples": "npx elm-verify-examples --elm-test=./node_modules/.bin/elm-test"
+    "verify-examples": "npx elm-verify-examples --run-tests"
   },
   "dependencies": {
     "elm": "^0.19.0-no-deps",
     "elm-format": "^0.8.1",
     "elm-test": "^0.19.0-rev6",
-    "elm-verify-examples": "^3.1.0"
+    "elm-verify-examples": "^4.0.0"
   }
 }
