--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "author": "GWI",
   "license": "BSD-3-Clause",
   "scripts": {
-    "test": "npx elm-test",
-    "verify-examples": "npx elm-verify-examples --run-tests"
+    "test": "npx elm-test"
   },
   "dependencies": {
     "elm": "^0.19.0-no-deps",
     "elm-format": "^0.8.1",
-    "elm-test": "^0.19.0-rev6",
-    "elm-verify-examples": "^4.0.0"
+    "elm-test": "^0.19.0-rev6"
   }
 }
